Closed
Bug 519987
Opened 16 years ago
Closed 16 years ago
new Image() has wrong namespace URI
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| status1.9.2 | --- | beta1-fixed |
People
(Reporter: bzbarsky, Assigned: bzbarsky)
References
(
URL
)
Details
Attachments
(1 file)
|
3.84 KB,
patch
|
sicking
:
review+
sicking
:
approval1.9.2+
|
Details | Diff | Splinter Review |
There were 4 spots that bug 468708 missed: new Image(), new Audio(), setting .title on a document, and poster frames for videos. Fixed on trunk as part of bug 488249, but I think we should fix them on the branch too.
We effectively have tests on trunk for this (because the frame constructor now uses namespace uris to create frames, so new Image() followed by insertion into the document wouldn't get an ImageFrame, but I can write a mochitest too before I check this in, if desired.
Flags: blocking1.9.2?
Attachment #404051 -
Flags: review?(jonas)
Attachment #404051 -
Flags: approval1.9.2?
| Assignee | ||
Updated•16 years ago
|
Assignee: nobody → bzbarsky
| Assignee | ||
Updated•16 years ago
|
Version: Trunk → 1.9.2 Branch
Comment on attachment 404051 [details] [diff] [review]
Fix for those 4 callsites
Can you also add an assertion to the nsGenericHTMLElement ctor to assert that the XHTML namespace is used.
r=me with that.
Attachment #404051 -
Flags: review?(jonas)
Attachment #404051 -
Flags: review+
Attachment #404051 -
Flags: approval1.9.2?
Attachment #404051 -
Flags: approval1.9.2+
| Assignee | ||
Comment 2•16 years ago
|
||
Pushed http://hg.mozilla.org/releases/mozilla-1.9.2/rev/50a7628372b9 to fix the bug
Pushed http://hg.mozilla.org/releases/mozilla-1.9.2/rev/db092a8a0b6f and http://hg.mozilla.org/mozilla-central/rev/6e8de7ff27b8 for the test and assert.
Status: NEW → RESOLVED
Closed: 16 years ago
status1.9.2:
--- → beta1-fixed
Flags: blocking1.9.2? → in-testsuite+
Resolution: --- → FIXED
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•