Bug 519987.  Test and assert.  r=sicking