content/html/content/src/nsGenericHTMLElement.h
@@ -74,6 +74,8 @@ public:
   nsGenericHTMLElement(nsINodeInfo *aNodeInfo)
     : nsGenericHTMLElementBase(aNodeInfo)
   {
+    NS_ASSERTION(aNodeInfo->NamespaceID() == kNameSpaceID_XHTML,
+                 "Unexpected namespace");
   }
 
   /** Typesafe, non-refcounting cast from nsIContent.  Cheaper than QI. **/
